# pyShelfClient

./: Cargo.toml  README.md  Trunk.toml
src/: books.rs  main.rs
