[package]
name = "pys_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
gloo = "0.8.0"
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
